fixed button alignment

--- a/core-2-interaction-studio/projects/stories-as-networks/style.css
+++ b/core-2-interaction-studio/projects/stories-as-networks/style.css
@@ -75,7 +75,7 @@ h1 {
 .original-text{
   display: flex;
   margin-top: -35px;
-  line-height: 200%;
+  line-height: 180%;
   padding: 2em;
   font-family: "neue-haas-grotesk-display", sans-serif;
   font-weight: 400;
@@ -121,15 +121,20 @@ a:visited{
   color: #FFB46D;
   border-color: #FFB46D;
   border: 4px solid #FFB46D;
-  border-radius: 100%;
+  border-radius: 50%;
   width: 40px;
   height: 40px;
   line-height: 40px;
   text-align: end;
-  padding-left: 5px;
+  margin-left: px;
 
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-weight: 700;
+}
+
+.move-question-mark{
+  display: flex;
+  margin-left: 10.6px;
 }
 
 .punct-circle-exclam {
@@ -147,6 +152,11 @@ a:visited{
   font-weight: 700;
 }
 
+.move-exclamation-mark{
+  display: flex;
+  margin-left: 15.5px;
+}
+
 .punct-circle-quote {
   display: inline-block;
   color: #3DC1CB;
@@ -160,6 +170,11 @@ a:visited{
 
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-weight: 700;
+}
+
+.move-quote-mark{
+  display: flex;
+  margin-left: -1px;
 }
 
 .punct-circle-apos {
@@ -177,6 +192,11 @@ a:visited{
   font-weight: 700;
 }
 
+.move-apos-mark{
+  display: flex;
+  margin-left: 16.25px;
+}
+
 .punct-circle-period {
   display: inline-block;
   color: #77DD77;
@@ -190,6 +210,11 @@ a:visited{
 
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-weight: 700;
+}
+
+.move-period-mark{
+  display: flex;
+  margin-left: 16px;
 }
 
 .punct-circle-comma {
@@ -207,6 +232,11 @@ a:visited{
   font-weight: 700;
 }
 
+.move-comma-mark{
+  display: flex;
+  margin-left: 16px;
+}
+
 .punct-circle-colon {
   display: inline-block;
   color: #FFE345;
@@ -220,6 +250,11 @@ a:visited{
 
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-weight: 700;
+}
+
+.move-colon-mark{
+  display: flex;
+  margin-left: 16px;
 }
 
 .punct-circle-scolon {
@@ -237,6 +272,10 @@ a:visited{
   font-weight: 700;
 }
 
+.move-semicolon-mark{
+  display: flex;
+  margin-left: 16px;
+}
 
 .punct-circle-question:active{
   -webkit-box-shadow:0px 0px 51px 14px rgba(255,180,109,0.9);
